static/style.css
/* Define color variables */
:root {
    --primary-color: #007BFF;
    --primary-dark-color: #0056b3;
    --primary-darker-color: #003d80;
    --light-blue: #00A8E8;
    --dark-blue: #003459;
    --hover-blue: #007EA7;
    --text-color: #FFFFFF;
    --black-color: #000000;
    --highlight-color: yellow;
    font-family: "Segoe UI", Helvetica, sans-serif;
    background-color:hsl(218deg 50% 91%);
}

body{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}
footer{
    margin-top: auto;
}

h1 {
    font-size: 3em;
}

img {
    margin-left: -15px;
}

.logo {
    width: 108%; /* Makes the logo fill the width of the sidebar */
    height: auto; /* Maintains aspect ratio */
    display: block;
    margin-bottom: 20px; /* Space below the logo */
    margin-top: -48%;
  }

/* Reset margins and padding for all elements */
* {
    margin: 0;
    padding: 0;
}

/* Navigation styling */
nav {
    position: relative;
    margin: 0;
    top: 0; /* Stay at the top */
    left: 0;
    padding-top: 5%;
    background-color: #012F3F;
    height: 100%; /* Full-height: remove this if you want "auto" height */
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    z-index: 1; /* Stay on top */
    overflow: auto;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

nav ul li {
    /* Sub Menu */
    list-style: none;
    padding-left: 15px;
}

nav ul li a {
    display: block;
    padding: 10px 10px;
    color: var(--text-color);
    text-decoration: none;
    transition: 0.2s linear;
}

nav ul li a:hover {
    background-color: var(--hover-blue);
    color: var(--text-color);
}

nav ul li ul li a {
    border-left: 2px solid transparent;
    padding: 10px 10px;
}

nav ul li ul li a:hover {
    border-left: 2px solid var(--text-color);
}

.logoanch {
    all: initial;
    cursor: pointer;
}

.username-highlight {
    color: var(--highlight-color); /* Define a variable or use a specific color code */
}

/* Nav User-name-display */
nav p {
    font-size: 1em;
    color: var(--text-color);
    display: block;
    padding: 10px 10px;
    color: var(--text-color);
    text-decoration: none;
    transition: 0.2s linear;
}

.content {
    min-height: 84.5vh;
}

/* Category container styling */
.category-container {
    display: flex;
    flex-flow: row wrap;
    align-content: space-around;
}

.category-container .box {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 25px;
    width: 20%;
    height: 7em;
    font-size: 2rem;
    background-color: var(--light-blue);
    color: var(--text-color);
    text-decoration: none;
    border-radius: 15px;
    transition: background-color 0.3s ease, transform 0.3s ease;
}

.box:hover {
    transform: scale(1.05);
}

/* Material box styling */
.material-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: var(--black-color);
    margin: 15px;
    width: 95%;
    text-decoration: none;
    transition: background-color 0.3s ease, transform 0.3s ease;
}

.material-box:hover {
    transform: scale(1.05);
}

.material-sub-box {
    position: relative;
    width: 100%; /* Ensure the box takes full width */
    background-color: var(--light-blue);
    padding: 15px;
    border-radius: 15px;
}

.material-sub-box h1 {
    margin-bottom: 15px;
    padding-bottom: 5px; /* Optional: Adjust to add space between text and border */
    position: relative;
    z-index: 1;
    font-size: 2em;
}

.material-sub-box h1::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: -5px; /* Adjust to control the distance from the text */
    width: 100%;
    height: 2px;
    background-color: var(--black-color);
    z-index: -1;
}

.post-date {
    display: flex;
    float: right;
}

/* Post button styling */
.post-button {
    display: inline-block;
    padding: 10px 20px;
    font-size: 16px;
    font-weight: bold;
    color: var(--text-color);
    background-color: var(--primary-color); /* Primary blue color */
    border: none;
    border-radius: 5px;
    text-decoration: none;
    text-align: center;
    transition: background-color 0.3s ease, transform 0.3s ease;
    margin-left: 87%;
}

.post-button:hover {
    background-color: var(--primary-dark-color); /* Darker blue for hover effect */
    transform: scale(1.05); /* Slightly enlarge the button */
}

.post-button:active {
    background-color: var(--primary-darker-color); /* Even darker blue for active effect */
    transform: scale(0.95); /* Slightly shrink the button on click */
}

.post-button:focus {
    outline: none;
    box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5); /* Focus ring for accessibility */
}

/* Post form styling */
.create-post {
    font-size: 2rem;
}

.post-title-input {
    width: 80%;
    padding: 1rem;
    font-size: 1rem;
    margin: 0;
    margin-bottom: 1em;
}

.post-textarea-field {
    width: 80%;
    padding: 1em;
    font-size: 1rem;
    margin-bottom: 1em;
    resize: none;
}

.submit-button input {
    padding: 1em;
    font-size: 1rem;
}

/* Footer styles */
footer {
    background-color: var(--hover-blue);
    color: var(--text-color);
    text-align: center;
    padding-top: 0.6em;
    padding-bottom: 0.6em;
}

.footer-container {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    max-width: 1400px;
    margin: 0 auto;
    padding: 0 20px;
}

.footer-section p, .footer-section a, .footer-section form {
    margin: 5px 0;
}

.footer-section a {
    color: var(--text-color);
    text-decoration: none;
}

.footer-section a:hover {
    text-decoration: underline;
}
/* ... */

